# 2048-game

./: .gitignore  README.md  animation_manager.py  animations.py  constants.py  controller.py  game.py  main.py  pyproject.toml  renderer.py
core/: game.py
game/: __init__.py  main.py
game/core/: game.py  states.py  types.py
game/input/: controller.py
game/rendering/: __init__.py  colors.py  constants.py  renderer.py
game/rendering/animations/: __init__.py  animation_manager.py  animations.py
game/rendering/components/: __init__.py  overlay.py  ui.py
game/rendering/tiles/: __init__.py  tile_renderer.py  tiles.py
input/: controller.py
rendering/: animation_manager.py  animations.py  colors.py  constants.py  overlay.py  renderer.py  tile_renderer.py  tiles.py  ui.py
tests/: test_animation_manager.py  test_animations.py  test_controller.py  test_game.py  test_main.py  test_renderer.py  test_tiles.py
